osx defaults tweaks add a new iterm icon

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -18,3 +18,7 @@
 	ch = checkout
 [include]
 	path = .gitconfig_overrides
+[filter "lfs"]
+	clean = git-lfs clean %f
+	smudge = git-lfs smudge %f
+	required = true
