git alias for reset-upstream

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -22,6 +22,7 @@
 	g = grep
 	co = checkout
 	pum = pull upstream master
+	ru = reset-upstream
 [include]
 	path = .gitconfig_overrides
 [filter "lfs"]
