--- a/config/.tmux.conf
+++ b/config/.tmux.conf
@@ -1,19 +1,16 @@
 # Enable cursor selection in iterm2
-set-option -g mouse-resize-pane on  
-set-option -g mouse-select-pane on  
-set-option -g mouse-select-window on  
-set-window-option -g mode-mouse on 
+set-option -g mouse on
 
 # Bind a key to kill the session/server
 bind-key q      confirm-before kill-session
-bind-key Q      confirm-before kill-server 
+bind-key Q      confirm-before kill-server
 
 # start window index of 1
 set-option -g base-index 1
 setw -g pane-base-index 1
 
 # use Powerline
-source /Library/Python/2.7/site-packages/powerline/bindings/tmux/powerline.conf
+source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 
 # fix pasteboard bug thing (see https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard)
 set-option -g default-command "reattach-to-user-namespace -l zsh"
