Clean up some autojump output. Change `git-cleanup` to `git cleanup`

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -8,6 +8,7 @@
 [core]
 	editor = atom --wait
 	excludesfile = ~/.dotfiles/config/gitignore_global
+	whitespace = -trailing-space
 [filter "media"]
 	clean = git-media-clean %f
 	smudge = git-media-smudge %f
