--- a/config/.tmux.conf
+++ b/config/.tmux.conf
@@ -1,6 +1,12 @@
 # Enable cursor selection in iterm2
 set-option -g mouse on
 
+# vi mode
+setw -g mode-keys vi
+
+# copy-paste with mouse
+bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"
+
 # Bind a key to kill the session/server
 bind-key q      confirm-before kill-session
 bind-key Q      confirm-before kill-server
@@ -11,6 +17,3 @@ setw -g pane-base-index 1
 
 # use Powerline
 source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
-
-# fix pasteboard bug thing (see https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard)
-set-option -g default-command "reattach-to-user-namespace -l zsh"
