--- a/config/.tmux.conf
+++ b/config/.tmux.conf
@@ -17,3 +17,6 @@ setw -g pane-base-index 1
 
 # use Powerline
 source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+
+# fix subl directory bug thing (https://github.com/SublimeTextIssues/Core/issues/675#issuecomment-73426588)
+set-option -g default-command "reattach-to-user-namespace -l zsh"
