--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -24,6 +24,7 @@
 	co = checkout
 	pum = pull upstream master
 	ru = reset-upstream
+	ro = reset-origin
 	rekt = push -f --no-verify
 [include]
 	path = .gitconfig_overrides
