--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -6,7 +6,7 @@
 [push]
 	default = tracking
 [core]
-	editor = atom --wait
+	editor = subl -n -w
 	excludesfile = ~/.dotfiles/config/gitignore_global
 	whitespace = -trailing-space
 [filter "media"]
